Changed the way the side bar hide icon works. No longer jumps to the top of the screen when closing.

--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -100,6 +100,7 @@ nav {
 
     h1 {
       font-size: 40px;
+      text-align: center;
     }
   }
 
@@ -208,6 +209,7 @@ nav {
 
   h2 {
     font-size: 30px;
+    text-align: center;
   }
 
   input {
